# AI-Agents

./: readme.md
Class_02/: OpenAI_agents_SDK_Hello_world.ipynb  README.md  api_basics_demo.ipynb  api_basics_demo.py  pyproject.toml  requirements.txt
Class_03/: OpenAI_agents_SDK_Hello_world.ipynb  README.md
Class_04/: README.md
Class_04/hello_agent/: .gitignore  README.md  main.py  pyproject.toml
Class_04/tool_calling/: README.md  main.py  pyproject.toml
Class_04/weather_search_tool/: .gitignore  README.md  main.py  pyproject.toml  server.py
Class_04/weather_search_tool/static/: app.js  index.html  style.css
Class_05/search_agent/: README.md  main.py  pyproject.toml
