[project]
name = "api-basics-demo"
version = "0.1.0"
description = "API basics demonstration with weather, cat facts, and Gemini AI"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "requests>=2.31.0",
    "google-genai>=0.3.0",
    "openai>=1.0.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
